--- a/portfolio-frontend/src/components/Footer/Footer.css
+++ b/portfolio-frontend/src/components/Footer/Footer.css
@@ -1,11 +1,12 @@
+/* Footer.css */
 .footer {
-  background-color: #f8f9fa; /* Couleur de fond claire */
+  background-color: #f8f9fa;
   padding: 1rem;
   text-align: center;
   font-size: 0.9rem;
-  color: #333; /* Couleur du texte */
-  border-top: 1px solid #e9ecef; /* Bordure subtile en haut */
-  position: relative;
-  bottom: 0;
+  color: #333;
+  border-top: 1px solid #e9ecef;
+  position: relative; /* Reste dans le flux normal */
   width: 100%;
+  z-index: 2; /* Légèrement supérieur à .app-container, mais en dessous des modales */
 }
